--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.1.3",
         "ext-dom": "*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*",
-        "doctrine/dbal": "^2.5",
-        "guzzlehttp/guzzle": "^6.2"
+        "illuminate/support": "5.5.*|5.6.*",
+        "guzzlehttp/guzzle": "^6.3",
+        "doctrine/dbal": "^2.6"
     },
     "require-dev": {
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~7.0",
         "orchestra/testbench": "~3.0"
     },
     "autoload": {
